examples/kubernetes/demo/ingress/ingress-tls.yaml
kind: Service
apiVersion: v1

metadata:
  name: hello-svc
  namespace: ns3

spec:
  selector:
    app: hello1
  type: NodePort
  ports:
  - port: 8000
    targetPort: http

---
kind: Service
apiVersion: v1

metadata:
  name: hello-svc2
  namespace: ns3

spec:
  selector:
    app: hello2
  type: NodePort
  ports:
  - port: 8001
    targetPort: myhttp
---
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: my-ingress
  namespace: ns3

spec:
  tls:
  - hosts:
    - kishore.arcesium.com
    secretName: tls-secret
  rules:
  - host: kishore.arcesium.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 8000
      - path: /hi
        backend:
          serviceName: hello-svc2
          servicePort: 8001
