examples/kubernetes/demo/ingress/ingress.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: ns2
---
kind: Service
apiVersion: v1

metadata:
  name: hello-svc
  namespace: ns2

spec:
  selector:
    app: hello1
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: http

---
kind: Service
apiVersion: v1

metadata:
  name: hello-svc2
  namespace: ns2

spec:
  selector:
    app: hello2
  type: LoadBalancer
  ports:
  - port: 8001
    targetPort: http2
---
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: my-ingress
  namespace: ns2

spec:
  rules:
  - host: kishore.arcesium.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 8000
      - path: /hi
        backend:
          serviceName: hello-svc2
          servicePort: 8001
